<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/lyContenedor"
    android:orientation="vertical">

    <TextView android:text="@string/lbNombre" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lbNombre"
        android:hint="@string/lbNombre"
        android:textColor="#ff000000" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtNombre"
        android:textColorHint="#ff000000"
        android:inputType="text"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbApellido"
        android:id="@+id/lbApellido"
        android:textColor="#ff000000" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtApellido"
        android:inputType="text"
        android:textColor="#ff000000"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbCorreo"
        android:id="@+id/lbcorreo"
        android:textColor="#ff000000"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/TextEmail"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbTelefono"
        android:id="@+id/lbTelefono"
        android:textColor="#ff000000"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/TextTelefono"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <Button
        android:layout_width="87dp"
        android:layout_height="wrap_content"
        android:text="@string/btmEnviar"
        android:id="@+id/btmEnviar"
        android:background="#c84fff1a"
         />

    <Button
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:text="@string/Bton"
        android:id="@+id/button2" />


</LinearLayout>
